--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,4 +1,6 @@
 body{padding: 0; margin: 0; color: #484848; font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;}
-
-.container {max-width: 1000px; position: absolute; left: 50%; margin-top: 30px; margin-bottom: 30px;}
+.container {width: 100% ; max-width: 1000px; margin-top: 30px; margin-bottom: 30px; margin-left: auto; margin-right: auto;}
+.filters{background-color: white; height: 70px; width: 100%; border: solid 1px #dddddd; border-radius: 4px;}
+button{font-size: 18px; background-color: #ff5a5f; color: #ffffff; height: 48px; border-radius: 4px; width: 20%; margin-right: 30px; float: right; display: table-cell; vertical-align: middle; position: relative; top: 50%; transform: translateY(-50%);}
+button:hover{opacity: .90;}
